--- a/content/manual/pages/monograph.mdx
+++ b/content/manual/pages/monograph.mdx
@@ -133,13 +133,13 @@ The closure constraints force four structural requirements on any candidate univ
 
 Once those structural requirements are enforced, the remaining degrees of freedom collapse to a Lovelock-type uniqueness statement in D = 4: the only divergence-free symmetric rank-2 tensor built locally from the metric and its derivatives is a linear combination of the Einstein tensor and the metric.
 
-The resulting field equation is the standard GR + Λ form:
+<p className="mt-4">The resulting field equation is the standard GR + Λ form:</p>
 
-```latex
-\[
-G_{\mu\nu} + \Lambda g_{\mu\nu} = 8\pi G\,T_{\mu\nu}.
-\]
-```
+<div className="mt-3 ml-10 font-serif text-lg leading-relaxed">
+  <span className="italic">G</span><sub>μν</sub> + Λ <span className="italic">g</span><sub>μν</sub>
+  {" = "}8π <span className="italic">G</span> <span className="italic">T</span><sub>μν</sub>.
+</div>
+
 
 In the monograph’s framing, this is not treated as “a postulate.” It is treated as the unique closure-stable universal interaction under the Tier–0 admissibility pipeline in four dimensions.
 
@@ -251,6 +251,7 @@ That is the intended “engine + map” structure.
 
 * Problems: **/problems**
 * Papers: **/papers**
+
 
 
 
