--- a/content/manual/pages/monograph.mdx
+++ b/content/manual/pages/monograph.mdx
@@ -135,9 +135,10 @@ Once those structural requirements are enforced, the remaining degrees of freedo
 
 <p className="mt-4">The resulting field equation is the standard GR + Λ form:</p>
 
-<div className="mt-3 ml-10 font-serif text-lg leading-relaxed">
-  <span className="italic">G</span><sub>μν</sub> + Λ <span className="italic">g</span><sub>μν</sub>
-  {" = "}8π <span className="italic">G</span> <span className="italic">T</span><sub>μν</sub>.
+<p className="mt-4">The resulting field equation is the standard GR + Λ form:</p>
+
+<div className="mt-3 ml-10">
+  {"\\[ G_{\\mu\\nu} + \\Lambda g_{\\mu\\nu} = 8\\pi G\\,T_{\\mu\\nu}. \\]"}
 </div>
 
 
@@ -251,6 +252,7 @@ That is the intended “engine + map” structure.
 
 * Problems: **/problems**
 * Papers: **/papers**
+
 
 
 
