--- a/content/manual/pages/monograph.mdx
+++ b/content/manual/pages/monograph.mdx
@@ -137,9 +137,13 @@ Once those structural requirements are enforced, the remaining degrees of freedo
 
 <p className="mt-4">The resulting field equation is the standard GR + Λ form:</p>
 
-<div className="mt-3 ml-10">
-  {"\\[ G_{\\mu\\nu} + \\Lambda g_{\\mu\\nu} = 8\\pi G\\,T_{\\mu\\nu}. \\]"}
+<p className="mt-4">The resulting field equation is the standard GR + Λ form:</p>
+
+<div className="mt-3 mb-6 ml-10 text-xl leading-relaxed font-[Cambria,Georgia,'Times_New_Roman',Times,serif] [font-variant-numeric:tabular-nums]">
+  <span className="italic">G</span><sub>μν</sub> + Λ <span className="italic">g</span><sub>μν</sub>
+  {" = "}8π <span className="italic">G</span> <span className="italic">T</span><sub>μν</sub>.
 </div>
+
 
 
 In the monograph’s framing, this is not treated as “a postulate.” It is treated as the unique closure-stable universal interaction under the Tier–0 admissibility pipeline in four dimensions.
@@ -252,6 +256,7 @@ That is the intended “engine + map” structure.
 
 * Problems: **/problems**
 * Papers: **/papers**
+
 
 
 
