--- a/content/manual/pages/monograph.mdx
+++ b/content/manual/pages/monograph.mdx
@@ -13,7 +13,7 @@ The monograph is built from two complementary pillars that are intentionally des
 The Engine formalizes a Tier–0 operator architecture in which admissible laws arise as fixed points of a universal closure triple (∂, Δ, Ω) acting on a law space. The controlling identity is the Everything Equation:
 
 <h2 className="mt-10 mb-8 text-center text-4xl font-semibold tracking-tight">
-  <span className="inline-block px-2 text-slate-900 dark:text-slate-100">
+  <span className="inline-block px-4 py-2">
     𝓛 = Ω Δ ∂ (𝓛)
   </span>
 </h2>
@@ -254,6 +254,7 @@ That is the intended “engine + map” structure.
 
 * Problems: **/problems**
 * Papers: **/papers**
+
 
 
 
