--- a/content/manual/pages/monograph.mdx
+++ b/content/manual/pages/monograph.mdx
@@ -12,10 +12,8 @@ The monograph is built from two complementary pillars that are intentionally des
 
 The Engine formalizes a Tier–0 operator architecture in which admissible laws arise as fixed points of a universal closure triple (∂, Δ, Ω) acting on a law space. The controlling identity is the Everything Equation:
 
-<h2 className="mt-10 mb-6 text-center text-3xl font-medium tracking-tight">
-  <span className="inline-block px-1">
-    𝓛 = Ω Δ ∂ (𝓛)
-  </span>
+<h2 className="mt-10 mb-6 text-center text-2xl font-normal tracking-wide">
+  𝓛 = Ω Δ ∂ (𝓛)
 </h2>
                                                                                 
 The Engine treats this as a law of lawhood: a candidate “law” is admissible only if it is stable under boundary normalization (∂), persistence/collapse filtering (Δ), and reflective closure (Ω).
@@ -254,6 +252,7 @@ That is the intended “engine + map” structure.
 
 * Problems: **/problems**
 * Papers: **/papers**
+
 
 
 
