--- a/content/manual/pages/what-is-the-everything-equation.mdx
+++ b/content/manual/pages/what-is-the-everything-equation.mdx
@@ -38,7 +38,7 @@ In other words: **admissible law = fixed point of ΩΔ∂**.
 
 ---
 
-# What “closure” means here
+# Formal Definition of Closure
 
 In this framework, “closure” is a precise structural idea: complete the candidate under the admissible transformations of the domain, so that the result is invariant under re-expression and stable under completion.
 
@@ -106,7 +106,7 @@ The monograph is the integrated “engine + map” view of the program: it expla
 
 ---
 
-# What this framework claims to resolve (high-level list)
+# Problems Addressed
 
 This page is not a complete index of results. The site contains separate Problem and Paper pages for each technical development. At the highest level, the framework is positioned to address:
 
@@ -151,21 +151,21 @@ This path is best if you want to interpret the framework as a fixed-point admiss
 
 ---
 
-# Status & scope (what is and isn’t claimed)
+# Status & scope 
 
-## What is claimed (scope)
+## Scope of the Claims
 
 * The Everything Equation is a lawhood criterion: it defines admissibility as fixed-point stability under ΩΔ∂.
 * The framework is domain-instantiable: the operator roles are stable, but their concrete meaning depends on the domain (physics vs mathematics vs information).
 * The program is structured so that claims are backed by papers, not by this explainer page.
 
-## What is not claimed (scope limits)
+## Limits of the Claims
 
 * We do **not** claim that a single short equation replaces the Standard Model, GR, or QFT. Existing theories remain the operational content; the framework is about admissibility and selection.
 * The framework does **not** claim that every open problem is solved “by definition.” Each resolution must be carried by explicit constructions, derivations, and (where applicable) falsifiers.
 * The framework does **not** claim that every domain necessarily admits the same instantiation of ∂, Δ, and Ω. The roles are fixed; the realizations must be specified and defended.
 
-## How to evaluate it
+## Evaluation Procedure
 
 Treat the Everything Equation as a structural test:
 
