--- a/content/manual/problems/standard-model.mdx
+++ b/content/manual/problems/standard-model.mdx
@@ -2,7 +2,7 @@
 
 The Standard Model (SM) is an exceptionally successful effective theory, but it is structurally nontrivial: its gauge group, its chiral fermion content, hypercharge quantization, and anomaly cancellations admit many algebraically conceivable “nearby” alternatives. This article presents the core reconstruction claim of the accompanying paper:
 
-**Within a determinant-closed SO(10) unification carrier, and under a strict admissibility discipline, the infrared Standard Model gauge group and one-generation chiral fermion content arise as an inherited consequence of restricting a single SO(10) spinor 16F, with embedding-fixed hypercharge and automatic anomaly cancellation.** 
+Within a determinant-closed SO(10) unification carrier, and under a strict admissibility discipline, the infrared Standard Model gauge group and one-generation chiral fermion content arise as an inherited consequence of restricting a single SO(10) spinor 16F, with embedding-fixed hypercharge and automatic anomaly cancellation. 
 
 This is a reconstruction, not model-building: no symmetry-breaking history, no RG numerics, no Yukawas/masses, and no speculative UV completion are used. 
 
@@ -220,6 +220,7 @@ If all six items pass, the reconstruction has done its job: it has shown that th
 
 * Structural Reconstruction of the Standard Model from SO(10): Gauge Group, Fermion Content, and Anomaly Cancellation**
   DOI: [10.5281/zenodo.18475611](https://doi.org/10.5281/zenodo.18475611)
+
 
 
 
