--- a/content/manual/problems/standard-model.mdx
+++ b/content/manual/problems/standard-model.mdx
@@ -19,7 +19,7 @@ The reconstruction target is the observed infrared record predicate:
 
 The central methodological claim is not “SO(10) can contain the SM” (textbook). The claim is:
 
-> **Once admissibility is enforced as a selection criterion, only the complete restriction of a determinant-closed carrier—with embedding-fixed hypercharge and no low-energy chiral exotics—passes the filter.** 
+> **Once admissibility is enforced as a selection criterion, only the complete restriction of a determinant-closed carrier with embedding-fixed hypercharge and no low-energy chiral exotics passes the filter.** 
 
 ---
 
@@ -220,6 +220,7 @@ If all six items pass, the reconstruction has done its job: it has shown that th
 
 * Structural Reconstruction of the Standard Model from SO(10): Gauge Group, Fermion Content, and Anomaly Cancellation**
   DOI: [10.5281/zenodo.18475611](https://doi.org/10.5281/zenodo.18475611)
+
 
 
 
