--- a/content/manual/problems/standard-model.mdx
+++ b/content/manual/problems/standard-model.mdx
@@ -162,7 +162,7 @@ This is important for interpretability: the paper keeps the representation-theor
 
 ---
 
-## What is “resolution-like” about this, structurally
+## Structural Criteria for Resolution
 
 Even without making any sociological claims, the paper has the key structural markers of a genuine resolution-class reconstruction:
 
@@ -187,7 +187,7 @@ For an expert reader, this is the signature of a reconstruction that is “tight
 
 ---
 
-## What is deliberately not attempted (and why that helps)
+## Deliberate Non-Aims
 
 This paper is deliberately conservative:
 
@@ -201,7 +201,7 @@ That is not a weakness. It is what makes the reconstruction readable as a struct
 
 ---
 
-## How to verify the reconstruction quickly
+## Rapid Verification of the Reconstruction
 
 A reader can independently validate the core reconstruction in a short checklist:
 
@@ -220,6 +220,7 @@ If all six items pass, the reconstruction has done its job: it has shown that th
 
 * Structural Reconstruction of the Standard Model from SO(10): Gauge Group, Fermion Content, and Anomaly Cancellation**
   DOI: [10.5281/zenodo.18475611](https://doi.org/10.5281/zenodo.18475611)
+
 
 
 
