--- a/content/manual/problems/standard-model.mdx
+++ b/content/manual/problems/standard-model.mdx
@@ -197,7 +197,7 @@ This paper is deliberately conservative:
 * no Yukawa sector, masses, mixings,
 * no UV completion speculation. 
 
-That is not a weakness. It is what makes the reconstruction readable as a structural result: **it isolates the minimal content required to organize the observed SM as a consistent descent of a determinant-closed carrier**, and nothing else.
+That is not a weakness. It is what makes the reconstruction readable as a structural result: it isolates the minimal content required to organize the observed SM as a consistent descent of a determinant-closed carrier, and nothing else.
 
 ---
 
@@ -220,6 +220,7 @@ If all six items pass, the reconstruction has done its job: it has shown that th
 
 * Structural Reconstruction of the Standard Model from SO(10): Gauge Group, Fermion Content, and Anomaly Cancellation**
   DOI: [10.5281/zenodo.18475611](https://doi.org/10.5281/zenodo.18475611)
+
 
 
 
